force-app/main/default/objects/MaintenanceJob__c/MaintenanceJob__c.object-meta.xml
<CustomObject>
    <description>レコードに関連しないジョブを実行するためのメンテナンス情報を定義する。</description>
    <label>メンテナンスジョブ</label>
    <nameField>
        <label>メンテナンスジョブ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>