force-app/main/default/objects/MaintenanceJob__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>ジョブ実行時のバッチサイズ</description>
    <inlineHelpText>ジョブ実行時のバッチサイズ</inlineHelpText>
    <label>バッチサイズ</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>