force-app/main/default/objects/MaintenanceJob__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>説明</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>