force-app/main/default/objects/MaintenanceJob__c/fields/IsRunning__c.field-meta.xml
<CustomField>
    <fullName>IsRunning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>実行中</label>
    <type>Checkbox</type>
</CustomField>