force-app/main/default/objects/MaintenanceJob__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>実行結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>