force-app/main/default/objects/MaintenanceJob__c/recordTypes/SpecialPricingCreate.recordType-meta.xml
<RecordType>
    <fullName>SpecialPricingCreate</fullName>
    <active>true</active>
    <label>特殊仕様マスタ自動作成</label>
</RecordType>